# GuideMe

./: CMakeLists.txt  README.md  cities.cpp  cities.h  cities.ui  citiesSelection.cpp  citiesSelection.h  citiesSelection.ui  dataentry.cpp  dataentry.h  dataentry.ui  dfs.cpp  dfs.h  edit_view.cpp  edit_view.h  edit_view.ui  editingfunctionalities.cpp  editingfunctionalities.h  editorialOptions.cpp  editorialOptions.h  editorialOptions.ui  file_management.cpp  file_management.h  gui_management.cpp  gui_management.h  images.qrc  main.cpp  result.cpp  result.h  result.ui  splashScreen.cpp  splashScreen.h  splashScreen.ui  transportationdisplay.cpp  transportationdisplay.h  transportationdisplay.ui  traversal.cpp  traversal.h  updatingtransportation.cpp  updatingtransportation.h  (+6 more)
CSS_styling/: ContainerWidget.css  PushButton.css  Result_Widgets.css  background.css  costLabel.css  listLabel.css  normalLabels.css  specialBackground.css  textfields.css  titleLabel.css  transportationWidgets.css  warningLabel.css  welcometitle.css
